--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -23,12 +23,12 @@ layout: default
         </h3>
         {%- if site.show_excerpts -%}
           {{ post.excerpt }}
+          {%- if post.content contains "" -%}
+            <p><a href="{{ post.url | relative_url }}">Read more &hellip;</a></p>
+          {%- endif -%}
         {%- endif -%}
       </li>
       {%- endfor -%}
     </ul>
-
-    <!--p class="rss-subscribe">subscribe <a href="{{ "/feed.xml" | relative_url }}">via RSS</a></p-->
   {%- endif -%}
-
 </div>
